#41 fixed 10x3